// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test account group component: userNotesView should render correctly '<UserNotesView />' when content is loaded and has progress. 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <section>
        <div
          aria-hidden="true"
          class="MuiBackdrop-root backdrop"
          style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        >
          <div
            class="MuiCircularProgress-root MuiCircularProgress-indeterminate"
            role="progressbar"
            style="width: 40px; height: 40px;"
          >
            <svg
              class="MuiCircularProgress-svg"
              viewBox="22 22 44 44"
            >
              <circle
                class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
                cx="44"
                cy="44"
                fill="none"
                r="20.2"
                stroke-width="3.6"
              />
            </svg>
          </div>
        </div>
        <div
          class="MuiContainer-root container-wide MuiContainer-maxWidthLg"
        >
          <div
            class="pt-120 pb-40"
          >
            <div
              class="MuiPaper-root MuiCard-root card MuiPaper-elevation0 MuiPaper-rounded"
            >
              <div
                class="MuiCardContent-root card-content"
              >
                <span
                  class="MuiTypography-root caption black MuiTypography-body1"
                >
                  User Notes
                </span>
                <div
                  class="mt-15 mb-8"
                >
                  <hr
                    class="MuiDivider-root divider"
                  />
                </div>
                <div
                  class="pt-25 pb-8"
                >
                  <div
                    class="mb-25"
                  >
                    <span
                      class="MuiTypography-root label MuiTypography-body1"
                    >
                      You can save up to 100000 private notes...
                    </span>
                  </div>
                  <div
                    class="user-notes-box"
                  >
                    <div
                      class="user-notes-container"
                    >
                      <span
                        class="MuiTypography-root label MuiTypography-body1"
                      >
                        Notes:
                      </span>
                      <div
                        class="user-notes-fixed-list user-notes-border mt-10 "
                      />
                    </div>
                    <div
                      class="user-notes-message-box"
                    >
                      <span
                        class="MuiTypography-root label MuiTypography-body1"
                      >
                        Message:
                      </span>
                      <div
                        class="user-notes-text-box mt-10"
                      >
                        <div
                          class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                        >
                          <div
                            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                          >
                            <input
                              aria-invalid="false"
                              class="MuiInputBase-input MuiOutlinedInput-input"
                              id="note"
                              name="note"
                              required=""
                              type="text"
                              value=""
                            />
                            <fieldset
                              aria-hidden="true"
                              class="PrivateNotchedOutline-root-9 MuiOutlinedInput-notchedOutline"
                              style="padding-left: 8px;"
                            >
                              <legend
                                class="PrivateNotchedOutline-legend-10"
                                style="width: 0.01px;"
                              >
                                <span>
                                  ​
                                </span>
                              </legend>
                            </fieldset>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="user-notes-button-box"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root MuiButton-contained button-delete button-margin-right Mui-disabled MuiButton-fullWidth Mui-disabled"
                      disabled=""
                      tabindex="-1"
                      type="submit"
                    >
                      <span
                        class="MuiButton-label"
                      >
                        Remove
                      </span>
                    </button>
                    <button
                      class="MuiButtonBase-root MuiButton-root MuiButton-contained button-update button-margin-right MuiButton-fullWidth"
                      tabindex="0"
                      type="submit"
                    >
                      <span
                        class="MuiButton-label"
                      >
                        Clear
                      </span>
                    </button>
                    <button
                      class="MuiButtonBase-root MuiButton-root MuiButton-contained button-update Mui-disabled MuiButton-fullWidth Mui-disabled"
                      disabled=""
                      tabindex="-1"
                      type="submit"
                    >
                      <span
                        class="MuiButton-label"
                      >
                        Save
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <section>
      <div
        aria-hidden="true"
        class="MuiBackdrop-root backdrop"
        style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      >
        <div
          class="MuiCircularProgress-root MuiCircularProgress-indeterminate"
          role="progressbar"
          style="width: 40px; height: 40px;"
        >
          <svg
            class="MuiCircularProgress-svg"
            viewBox="22 22 44 44"
          >
            <circle
              class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
              cx="44"
              cy="44"
              fill="none"
              r="20.2"
              stroke-width="3.6"
            />
          </svg>
        </div>
      </div>
      <div
        class="MuiContainer-root container-wide MuiContainer-maxWidthLg"
      >
        <div
          class="pt-120 pb-40"
        >
          <div
            class="MuiPaper-root MuiCard-root card MuiPaper-elevation0 MuiPaper-rounded"
          >
            <div
              class="MuiCardContent-root card-content"
            >
              <span
                class="MuiTypography-root caption black MuiTypography-body1"
              >
                User Notes
              </span>
              <div
                class="mt-15 mb-8"
              >
                <hr
                  class="MuiDivider-root divider"
                />
              </div>
              <div
                class="pt-25 pb-8"
              >
                <div
                  class="mb-25"
                >
                  <span
                    class="MuiTypography-root label MuiTypography-body1"
                  >
                    You can save up to 100000 private notes...
                  </span>
                </div>
                <div
                  class="user-notes-box"
                >
                  <div
                    class="user-notes-container"
                  >
                    <span
                      class="MuiTypography-root label MuiTypography-body1"
                    >
                      Notes:
                    </span>
                    <div
                      class="user-notes-fixed-list user-notes-border mt-10 "
                    />
                  </div>
                  <div
                    class="user-notes-message-box"
                  >
                    <span
                      class="MuiTypography-root label MuiTypography-body1"
                    >
                      Message:
                    </span>
                    <div
                      class="user-notes-text-box mt-10"
                    >
                      <div
                        class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                      >
                        <div
                          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                        >
                          <input
                            aria-invalid="false"
                            class="MuiInputBase-input MuiOutlinedInput-input"
                            id="note"
                            name="note"
                            required=""
                            type="text"
                            value=""
                          />
                          <fieldset
                            aria-hidden="true"
                            class="PrivateNotchedOutline-root-9 MuiOutlinedInput-notchedOutline"
                            style="padding-left: 8px;"
                          >
                            <legend
                              class="PrivateNotchedOutline-legend-10"
                              style="width: 0.01px;"
                            >
                              <span>
                                ​
                              </span>
                            </legend>
                          </fieldset>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="user-notes-button-box"
                >
                  <button
                    class="MuiButtonBase-root MuiButton-root MuiButton-contained button-delete button-margin-right Mui-disabled MuiButton-fullWidth Mui-disabled"
                    disabled=""
                    tabindex="-1"
                    type="submit"
                  >
                    <span
                      class="MuiButton-label"
                    >
                      Remove
                    </span>
                  </button>
                  <button
                    class="MuiButtonBase-root MuiButton-root MuiButton-contained button-update button-margin-right MuiButton-fullWidth"
                    tabindex="0"
                    type="submit"
                  >
                    <span
                      class="MuiButton-label"
                    >
                      Clear
                    </span>
                  </button>
                  <button
                    class="MuiButtonBase-root MuiButton-root MuiButton-contained button-update Mui-disabled MuiButton-fullWidth Mui-disabled"
                    disabled=""
                    tabindex="-1"
                    type="submit"
                  >
                    <span
                      class="MuiButton-label"
                    >
                      Save
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`test account group component: userNotesView should render correctly '<UserNotesView />' when content is loaded. 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <section>
        <div
          aria-hidden="true"
          class="MuiBackdrop-root backdrop"
          style="opacity: 0; visibility: hidden;"
        >
          <div
            class="MuiCircularProgress-root MuiCircularProgress-indeterminate"
            role="progressbar"
            style="width: 40px; height: 40px;"
          >
            <svg
              class="MuiCircularProgress-svg"
              viewBox="22 22 44 44"
            >
              <circle
                class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
                cx="44"
                cy="44"
                fill="none"
                r="20.2"
                stroke-width="3.6"
              />
            </svg>
          </div>
        </div>
        <div
          class="MuiContainer-root container-wide MuiContainer-maxWidthLg"
        >
          <div
            class="pt-120 pb-40"
          >
            <div
              class="MuiPaper-root MuiCard-root card MuiPaper-elevation0 MuiPaper-rounded"
            >
              <div
                class="MuiCardContent-root card-content"
              >
                <span
                  class="MuiTypography-root caption black MuiTypography-body1"
                >
                  User Notes
                </span>
                <div
                  class="mt-15 mb-8"
                >
                  <hr
                    class="MuiDivider-root divider"
                  />
                </div>
                <div
                  class="pt-25 pb-8"
                >
                  <div
                    class="mb-25"
                  >
                    <span
                      class="MuiTypography-root label MuiTypography-body1"
                    >
                      You can save up to 100000 private notes...
                    </span>
                  </div>
                  <div
                    class="user-notes-box"
                  >
                    <div
                      class="user-notes-container"
                    >
                      <span
                        class="MuiTypography-root label MuiTypography-body1"
                      >
                        Notes:
                      </span>
                      <div
                        class="user-notes-fixed-list user-notes-border mt-10 "
                      />
                    </div>
                    <div
                      class="user-notes-message-box"
                    >
                      <span
                        class="MuiTypography-root label MuiTypography-body1"
                      >
                        Message:
                      </span>
                      <div
                        class="user-notes-text-box mt-10"
                      >
                        <div
                          class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                        >
                          <div
                            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                          >
                            <input
                              aria-invalid="false"
                              class="MuiInputBase-input MuiOutlinedInput-input"
                              id="note"
                              name="note"
                              required=""
                              type="text"
                              value=""
                            />
                            <fieldset
                              aria-hidden="true"
                              class="PrivateNotchedOutline-root-1 MuiOutlinedInput-notchedOutline"
                              style="padding-left: 8px;"
                            >
                              <legend
                                class="PrivateNotchedOutline-legend-2"
                                style="width: 0.01px;"
                              >
                                <span>
                                  ​
                                </span>
                              </legend>
                            </fieldset>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="user-notes-button-box"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root MuiButton-contained button-delete button-margin-right Mui-disabled MuiButton-fullWidth Mui-disabled"
                      disabled=""
                      tabindex="-1"
                      type="submit"
                    >
                      <span
                        class="MuiButton-label"
                      >
                        Remove
                      </span>
                    </button>
                    <button
                      class="MuiButtonBase-root MuiButton-root MuiButton-contained button-update button-margin-right MuiButton-fullWidth"
                      tabindex="0"
                      type="submit"
                    >
                      <span
                        class="MuiButton-label"
                      >
                        Clear
                      </span>
                    </button>
                    <button
                      class="MuiButtonBase-root MuiButton-root MuiButton-contained button-update Mui-disabled MuiButton-fullWidth Mui-disabled"
                      disabled=""
                      tabindex="-1"
                      type="submit"
                    >
                      <span
                        class="MuiButton-label"
                      >
                        Save
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <section>
      <div
        aria-hidden="true"
        class="MuiBackdrop-root backdrop"
        style="opacity: 0; visibility: hidden;"
      >
        <div
          class="MuiCircularProgress-root MuiCircularProgress-indeterminate"
          role="progressbar"
          style="width: 40px; height: 40px;"
        >
          <svg
            class="MuiCircularProgress-svg"
            viewBox="22 22 44 44"
          >
            <circle
              class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
              cx="44"
              cy="44"
              fill="none"
              r="20.2"
              stroke-width="3.6"
            />
          </svg>
        </div>
      </div>
      <div
        class="MuiContainer-root container-wide MuiContainer-maxWidthLg"
      >
        <div
          class="pt-120 pb-40"
        >
          <div
            class="MuiPaper-root MuiCard-root card MuiPaper-elevation0 MuiPaper-rounded"
          >
            <div
              class="MuiCardContent-root card-content"
            >
              <span
                class="MuiTypography-root caption black MuiTypography-body1"
              >
                User Notes
              </span>
              <div
                class="mt-15 mb-8"
              >
                <hr
                  class="MuiDivider-root divider"
                />
              </div>
              <div
                class="pt-25 pb-8"
              >
                <div
                  class="mb-25"
                >
                  <span
                    class="MuiTypography-root label MuiTypography-body1"
                  >
                    You can save up to 100000 private notes...
                  </span>
                </div>
                <div
                  class="user-notes-box"
                >
                  <div
                    class="user-notes-container"
                  >
                    <span
                      class="MuiTypography-root label MuiTypography-body1"
                    >
                      Notes:
                    </span>
                    <div
                      class="user-notes-fixed-list user-notes-border mt-10 "
                    />
                  </div>
                  <div
                    class="user-notes-message-box"
                  >
                    <span
                      class="MuiTypography-root label MuiTypography-body1"
                    >
                      Message:
                    </span>
                    <div
                      class="user-notes-text-box mt-10"
                    >
                      <div
                        class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                      >
                        <div
                          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                        >
                          <input
                            aria-invalid="false"
                            class="MuiInputBase-input MuiOutlinedInput-input"
                            id="note"
                            name="note"
                            required=""
                            type="text"
                            value=""
                          />
                          <fieldset
                            aria-hidden="true"
                            class="PrivateNotchedOutline-root-1 MuiOutlinedInput-notchedOutline"
                            style="padding-left: 8px;"
                          >
                            <legend
                              class="PrivateNotchedOutline-legend-2"
                              style="width: 0.01px;"
                            >
                              <span>
                                ​
                              </span>
                            </legend>
                          </fieldset>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="user-notes-button-box"
                >
                  <button
                    class="MuiButtonBase-root MuiButton-root MuiButton-contained button-delete button-margin-right Mui-disabled MuiButton-fullWidth Mui-disabled"
                    disabled=""
                    tabindex="-1"
                    type="submit"
                  >
                    <span
                      class="MuiButton-label"
                    >
                      Remove
                    </span>
                  </button>
                  <button
                    class="MuiButtonBase-root MuiButton-root MuiButton-contained button-update button-margin-right MuiButton-fullWidth"
                    tabindex="0"
                    type="submit"
                  >
                    <span
                      class="MuiButton-label"
                    >
                      Clear
                    </span>
                  </button>
                  <button
                    class="MuiButtonBase-root MuiButton-root MuiButton-contained button-update Mui-disabled MuiButton-fullWidth Mui-disabled"
                    disabled=""
                    tabindex="-1"
                    type="submit"
                  >
                    <span
                      class="MuiButton-label"
                    >
                      Save
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`test account group component: userNotesView should render correctly '<UserNotesView />' when content is loading. 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <section>
        <div
          aria-hidden="true"
          class="MuiBackdrop-root backdrop"
          style="opacity: 0; visibility: hidden;"
        >
          <div
            class="MuiCircularProgress-root MuiCircularProgress-indeterminate"
            role="progressbar"
            style="width: 40px; height: 40px;"
          >
            <svg
              class="MuiCircularProgress-svg"
              viewBox="22 22 44 44"
            >
              <circle
                class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
                cx="44"
                cy="44"
                fill="none"
                r="20.2"
                stroke-width="3.6"
              />
            </svg>
          </div>
        </div>
        <div
          class="MuiContainer-root container-wide MuiContainer-maxWidthLg"
        >
          <div
            class="pt-120 pb-40"
          >
            <div
              class="MuiPaper-root MuiCard-root card MuiPaper-elevation0 MuiPaper-rounded"
            >
              <div
                class="MuiCardContent-root card-content"
              >
                <span
                  class="MuiTypography-root caption black MuiTypography-body1"
                >
                  <span
                    class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse"
                  />
                </span>
                <div
                  class="mt-15 mb-8"
                >
                  <hr
                    class="MuiDivider-root divider"
                  />
                </div>
                <div
                  class="pt-25 pb-8"
                >
                  <div
                    class="mb-25"
                  >
                    <span
                      class="MuiTypography-root label MuiTypography-body1"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse"
                      />
                    </span>
                  </div>
                  <div
                    class="user-notes-box"
                  >
                    <div
                      class="user-notes-container"
                    >
                      <span
                        class="MuiTypography-root label MuiTypography-body1"
                      >
                        <span
                          class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse"
                        />
                      </span>
                      <div
                        class="user-notes-fixed-list user-notes-border mt-10 loading-indicator"
                      />
                    </div>
                    <div
                      class="user-notes-message-box"
                    >
                      <span
                        class="MuiTypography-root label MuiTypography-body1"
                      >
                        <span
                          class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse"
                        />
                      </span>
                      <div
                        class="user-notes-text-box mt-10"
                      >
                        <div
                          class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                        >
                          <div
                            class="MuiInputBase-root MuiOutlinedInput-root Mui-disabled Mui-disabled MuiInputBase-fullWidth MuiInputBase-formControl"
                          >
                            <input
                              aria-invalid="false"
                              class="MuiInputBase-input MuiOutlinedInput-input Mui-disabled Mui-disabled"
                              disabled=""
                              id="note"
                              name="note"
                              required=""
                              type="text"
                              value=""
                            />
                            <fieldset
                              aria-hidden="true"
                              class="PrivateNotchedOutline-root-5 MuiOutlinedInput-notchedOutline"
                              style="padding-left: 8px;"
                            >
                              <legend
                                class="PrivateNotchedOutline-legend-6"
                                style="width: 0.01px;"
                              >
                                <span>
                                  ​
                                </span>
                              </legend>
                            </fieldset>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="user-notes-button-box"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root MuiButton-contained button-delete button-margin-right Mui-disabled MuiButton-fullWidth Mui-disabled"
                      disabled=""
                      tabindex="-1"
                      type="submit"
                    >
                      <span
                        class="MuiButton-label"
                      >
                        Remove
                      </span>
                    </button>
                    <button
                      class="MuiButtonBase-root MuiButton-root MuiButton-contained button-update button-margin-right Mui-disabled MuiButton-fullWidth Mui-disabled"
                      disabled=""
                      tabindex="-1"
                      type="submit"
                    >
                      <span
                        class="MuiButton-label"
                      >
                        Clear
                      </span>
                    </button>
                    <button
                      class="MuiButtonBase-root MuiButton-root MuiButton-contained button-update Mui-disabled MuiButton-fullWidth Mui-disabled"
                      disabled=""
                      tabindex="-1"
                      type="submit"
                    >
                      <span
                        class="MuiButton-label"
                      >
                        Save
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <section>
      <div
        aria-hidden="true"
        class="MuiBackdrop-root backdrop"
        style="opacity: 0; visibility: hidden;"
      >
        <div
          class="MuiCircularProgress-root MuiCircularProgress-indeterminate"
          role="progressbar"
          style="width: 40px; height: 40px;"
        >
          <svg
            class="MuiCircularProgress-svg"
            viewBox="22 22 44 44"
          >
            <circle
              class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
              cx="44"
              cy="44"
              fill="none"
              r="20.2"
              stroke-width="3.6"
            />
          </svg>
        </div>
      </div>
      <div
        class="MuiContainer-root container-wide MuiContainer-maxWidthLg"
      >
        <div
          class="pt-120 pb-40"
        >
          <div
            class="MuiPaper-root MuiCard-root card MuiPaper-elevation0 MuiPaper-rounded"
          >
            <div
              class="MuiCardContent-root card-content"
            >
              <span
                class="MuiTypography-root caption black MuiTypography-body1"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse"
                />
              </span>
              <div
                class="mt-15 mb-8"
              >
                <hr
                  class="MuiDivider-root divider"
                />
              </div>
              <div
                class="pt-25 pb-8"
              >
                <div
                  class="mb-25"
                >
                  <span
                    class="MuiTypography-root label MuiTypography-body1"
                  >
                    <span
                      class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse"
                    />
                  </span>
                </div>
                <div
                  class="user-notes-box"
                >
                  <div
                    class="user-notes-container"
                  >
                    <span
                      class="MuiTypography-root label MuiTypography-body1"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse"
                      />
                    </span>
                    <div
                      class="user-notes-fixed-list user-notes-border mt-10 loading-indicator"
                    />
                  </div>
                  <div
                    class="user-notes-message-box"
                  >
                    <span
                      class="MuiTypography-root label MuiTypography-body1"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse"
                      />
                    </span>
                    <div
                      class="user-notes-text-box mt-10"
                    >
                      <div
                        class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                      >
                        <div
                          class="MuiInputBase-root MuiOutlinedInput-root Mui-disabled Mui-disabled MuiInputBase-fullWidth MuiInputBase-formControl"
                        >
                          <input
                            aria-invalid="false"
                            class="MuiInputBase-input MuiOutlinedInput-input Mui-disabled Mui-disabled"
                            disabled=""
                            id="note"
                            name="note"
                            required=""
                            type="text"
                            value=""
                          />
                          <fieldset
                            aria-hidden="true"
                            class="PrivateNotchedOutline-root-5 MuiOutlinedInput-notchedOutline"
                            style="padding-left: 8px;"
                          >
                            <legend
                              class="PrivateNotchedOutline-legend-6"
                              style="width: 0.01px;"
                            >
                              <span>
                                ​
                              </span>
                            </legend>
                          </fieldset>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="user-notes-button-box"
                >
                  <button
                    class="MuiButtonBase-root MuiButton-root MuiButton-contained button-delete button-margin-right Mui-disabled MuiButton-fullWidth Mui-disabled"
                    disabled=""
                    tabindex="-1"
                    type="submit"
                  >
                    <span
                      class="MuiButton-label"
                    >
                      Remove
                    </span>
                  </button>
                  <button
                    class="MuiButtonBase-root MuiButton-root MuiButton-contained button-update button-margin-right Mui-disabled MuiButton-fullWidth Mui-disabled"
                    disabled=""
                    tabindex="-1"
                    type="submit"
                  >
                    <span
                      class="MuiButton-label"
                    >
                      Clear
                    </span>
                  </button>
                  <button
                    class="MuiButtonBase-root MuiButton-root MuiButton-contained button-update Mui-disabled MuiButton-fullWidth Mui-disabled"
                    disabled=""
                    tabindex="-1"
                    type="submit"
                  >
                    <span
                      class="MuiButton-label"
                    >
                      Save
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
